[gd_scene load_steps=7 format=3 uid="uid://c5nrx16ypbrq8"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_4mhh1"]
[ext_resource type="PackedScene" uid="uid://6y5wir75g0s8" path="res://scenes/menu.tscn" id="1_5eq04"]
[ext_resource type="PackedScene" uid="uid://xq0a6xvieh3q" path="res://scenes/background.tscn" id="1_robj6"]
[ext_resource type="PackedScene" uid="uid://bjsmiaxraodf7" path="res://scenes/player.tscn" id="2_llp80"]
[ext_resource type="FontFile" uid="uid://ctarhy48yiein" path="res://fonts/LazyFox Pixel Font 4.ttf" id="3_5bgu4"]
[ext_resource type="AudioStream" uid="uid://bwkvc02qolocb" path="res://sounds/Acid House.mp3" id="6_g1v3b"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mhh1")

[node name="background" parent="." instance=ExtResource("1_robj6")]
layout_mode = 1

[node name="ScoreLabel" type="Label" parent="."]
z_index = 200
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_5bgu4")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="Menu" parent="." instance=ExtResource("1_5eq04")]
z_index = 500
layout_mode = 1

[node name="player" parent="." instance=ExtResource("2_llp80")]
z_index = 100

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_g1v3b")
volume_db = -10.0
autoplay = true

[connection signal="new_game_pressed" from="Menu" to="." method="_on_menu_new_game_pressed"]
[connection signal="sound_toggle" from="Menu" to="." method="_on_menu_sound_toggle"]
[connection signal="game_over" from="player" to="." method="_on_player_game_over"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
